tests/typec-test/test_out/spec-with-funcs-parse-out.txt
error: expected '\n' | ';' but got '['
 --> spec-with-funcs\root.ctl:1:14
  |
1 | struct Glued [T] { inner : T } ; spec Glue { fn new -> Self ; fn [T] use_on(s : Self, value : T) -> Glued [T] ; } impl Glue for uint {     fn new -> Self => 0 ; fn [T] use_on(s : Self, value : T) -> Glued [T] =>     \ { inner : value } ; } fn [G, T] glue_up(value : T) -> Glued [T] { G \ new().use_on(value) }
  |              ^ token located here
  |
  = info: list

error: expected '\n' | ';' but got 'impl'
 --> spec-with-funcs\root.ctl:1:115
  |
1 | struct Glued [T] { inner : T } ; spec Glue { fn new -> Self ; fn [T] use_on(s : Self, value : T) -> Glued [T] ; } impl Glue for uint {     fn new -> Self => 0 ; fn [T] use_on(s : Self, value : T) -> Glued [T] =>     \ { inner : value } ; } fn [G, T] glue_up(value : T) -> Glued [T] { G \ new().use_on(value) }
  |                                                                                                                   ^^^^ token located here
  |
  = info: list

